[gd_scene load_steps=5 format=2]

[ext_resource path="res://ai4u/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://ai4u/Models/Dummy/Dummy.tscn" type="PackedScene" id=2]
[ext_resource path="res://ai4u/Scripts/CameraHelper.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.305403
height = 0.875462

[node name="Player" type="KinematicBody"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CharacterMesh" type="Spatial" parent="."]

[node name="Dummy" parent="CharacterMesh" instance=ExtResource( 2 )]
transform = Transform( 0.870705, 0, 0, 0, 0.870705, 0, 0, 0, 0.870705, 0, 0, 0 )

[node name="LedgeFoward" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30606, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.82 )

[node name="LedgeDown" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92343, 0.498751 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="LedgeMaxLeft" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1.93045, 0.669 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="LedgeMaxRight" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1.93045, 0.669 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="CollisionPlayer" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.787847, 0 )
shape = SubResource( 1 )

[node name="CameraBase" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81909, 0 )
script = ExtResource( 3 )

[node name="CameraPivot" type="Spatial" parent="CameraBase"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0.5 )

[node name="RayCamera" type="RayCast" parent="CameraBase/CameraPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.37114e-08, 0, 0.5 )
enabled = true
cast_to = Vector3( 0, 0, -2.5 )
collision_mask = 3

[node name="CameraOffset" type="Spatial" parent="CameraBase/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.985792, 0.167973, 0, -0.167973, 0.985792, 0, 0, 3 )

[node name="Camera" type="Camera" parent="CameraBase/CameraPivot/CameraOffset"]
transform = Transform( 1, 0, 0, 0, 1, -3.12924e-07, 0, 3.12924e-07, 1, -1.84869e-08, 0.0355207, -0.208461 )

